--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spinners": "^0.13.8",
-    "react-tooltip": "^5.26.3"
+    "react-tooltip": "^5.26.3",
+    "reactstrap": "^9.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
